<resources>
    <string name="app_name">PTS terminal</string>
    <string name="title_info">Информация.</string>
    <string name="title_warning">Предупреждение.</string>
    <string name="title_errror">Ошибка.</string>
    <string name="title_dialog_enter_amount">Введите количество продукта</string>
    <string name="title_dialog_enter_config">Введите персональные данные</string>
    <string name="title_order_confirm">Подтвердите заказ</string>
    <string name="title_order_paid">Оплата заказа</string>
    <string name="titleDispenserControlOrderAmount">Количество(л.)</string>
    <string name="titleDispenserControlOrderProduct">Продукт</string>
    <string name="titlePage_pumps">Заправочные места</string>
    <string name="titlePage_authorisation">Авторизация пользователя</string>
    <string name="titlePage_disp_control">Управление заправочным местом</string>
    <string name="titlePage_select_product">Выбор продукта</string>
    <string name="titlePage_make_order">Оформление заказа</string>
    <string name="titlePage_pay_order">Оплата заказа</string>
    <string name="titleDispenserControlOrderState">Состояние заказа:</string>
    <string name="alert_dialog_two_buttons_title">Вы хотите закрыть приложение?</string>
    <string name="alert_dialog_two_buttons_from_main_menu">Вы хотите выйти из главного меню?</string>
    <string name="alert_dialog_reconnect_title">Сервер не отвечает.\n Повторить попытку?</string>
    <string name="textLogoTiT"><b>T&amp;T</b></string>
    <string name="textLogoPTSMaster"><b>PTS-Master Пульт 1.1.</b></string>
    <string name="textUser"><b>Оператор:</b></string>
    <string name="textOrderProductName">Продукт:</string>
    <string name="textOrderProductAmount">Количество:</string>
    <string name="textOrderProductAmountUnit">(литры)</string>
    <string name="textOrderProductMoneyUnit">(грн.)</string>
    <string name="textOrderProductSummUnit">грн.</string>
    <string name="textOrderProductSumm">СУММА:</string>
    <string name="textOrderFullTank">Полный бак</string>
    <string name="textDispenserControl_summ">Сумма</string>
    <string name="textDispenserControl_litres">Литры</string>
    <string name="textDispenserControl_price">Цена</string>
    <string name="textImposiblePayFullTank">Данный заказ не может быть предварительно оплачен</string>
    <string name="textOrderHasBeenPaid">Заказ оплачен</string>
    <string name="textNeedCashback">Необходимо вернуть сдачу:</string>
    <string name="textOrderNotHasBeenPaid">Заказ оплачен неполностью</string>
    <string name="textConnectingToServer">Обмен данными с сервером.</string>
    <string name="mess_dispenser_ready">Готов к отпуску</string>
    <string name="mess_dispenser_order_make">Выполнение заказа</string>
    <string name="mess_dispenser_order_end">Заказ выполнен</string>
    <string name="messErrror_need_nozzle_up">Поднимите пистолет</string>
    <string name="messError_nozzle_bad">Поднят пистолет с другим продуктом</string>
    <string name="messErrror_need_order_pay">Отпуск окончен, нужно оплатить заказ</string>
    <string name="messErrror_null_order">Невозможно сделать заказ на нулевое количество</string>
    <string name="messErrror_null_pay">Невозможно сделать нулевую оплату</string>
    <string name="btn_create">Create</string>
    <string name="btn_send">Send</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Да</string>
    <string name="btn_reconnect">Подключиться</string>
    <string name="btn_exit">Выход</string>
    <string name="btn_no">Нет</string>
    <string name="btn_scancode">Сканер</string>
    <string name="btn_begin_request">Begin request</string>
    <string name="btn_start">Пуск</string>
    <string name="btn_stop">Стоп</string>
    <string name="btn_back">Назад</string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_pay">Оплатить</string>
    <string name="btn_help">Помощь</string>
    <string name="btn_clear">Очистить</string>
    <string name="btn_fulltank">ПБ</string>
    <string name="btn_cash">Г</string>
    <string name="btn_backspace">&#8592;</string>
    <string name="btn_money">$</string>
    <string name="btn_confirm">OK</string>
    <string name="btn_scaner">Сканер</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_C">C</string>
    <string name="btn_0point">0/.</string>
    <string name="btn_00">00</string>
    <string name="btn_point"><b>.</b></string>
    <string name="stringProductAmountFull">FULL</string>
    <string name="order_unit_money">Деньги</string>
    <string name="order_unit_litres">Литры</string>
    <string name="order_pay_form">Форма оплаты</string>
    <string name="clerk_list">Список пользователей</string>
</resources>