<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_weight="0.35"
            android:background="#000000" >

            <TextView
                android:id="@+id/server_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/textLogoTiT"
                android:textColor="#EA152B"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTextLogoPTSMaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginLeft="60dip"
                android:layout_marginTop="2dip"
                android:text="@string/textLogoPTSMaster"
                android:textColor="#FBFB04"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/idTitlePage"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_gravity="bottom|center_vertical|center_horizontal"
                android:layout_marginBottom="0dip"
                android:gravity="center"
                android:text="Авторизация пользователя"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginLeft="60dip"
                android:layout_marginTop="15dip" >

                <TextView
                    android:id="@+id/idTextUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:text="@string/textUser"
                    android:textColor="#FFFFFF"
                    android:textSize="12dip"
                    android:textStyle="normal"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/idNameUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Петров"
                    android:textColor="#FFFFFF"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="serif" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewTitleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="33dip"
                android:layout_weight="1"
                android:src="@drawable/title_line" />

        </FrameLayout>

        <GridView
            android:id="@+id/viewPump"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:numColumns="1" />

        <!--
                <GridView
                    android:id="@+id/viewPump"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:numColumns="1" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="fill_parent"
                    android:layout_height="80dip"
                    android:layout_weight="1"
                    android:src="@drawable/key_pump_undefined" />

                <View
                    android:id="@+id/viewPump"
                    android:layout_width="fill_parent"
                    android:layout_height="80dip"
                    android:
                    android:layout_weight="1" />


        -->
    </LinearLayout>

</RelativeLayout>

    <!--
            <GridView
                android:id="@+id/viewPump"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|top"
                android:layout_marginLeft="290dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:numColumns="1" />
     -->